adding authentication jwt
